[gd_scene load_steps=33 format=3 uid="uid://c85upihop1f2h"]

[ext_resource type="PackedScene" uid="uid://b586bivk803dn" path="res://scenes/tile_maps.tscn" id="1_wvx64"]
[ext_resource type="PackedScene" uid="uid://dib7ao0bk4044" path="res://scenes/objects/stairs.tscn" id="2_rhamc"]
[ext_resource type="Texture2D" uid="uid://b12poelkjcx7h" path="res://images/ts_interiorDecorations.png" id="3_037ej"]
[ext_resource type="PackedScene" uid="uid://dqsicmgoiw7g7" path="res://scenes/objects/door.tscn" id="4_81x4m"]
[ext_resource type="Script" path="res://src/navigation.gd" id="5_pbgfy"]
[ext_resource type="PackedScene" uid="uid://bv6wavira5t7q" path="res://scenes/npc.tscn" id="6_j1vmi"]
[ext_resource type="Script" path="res://src/player.gd" id="7_6lngv"]
[ext_resource type="JSON" uid="uid://q6pyv00446ed" path="res://resources/npcs/employee.tres" id="7_i5j8r"]
[ext_resource type="Texture2D" uid="uid://6w00xex8cejs" path="res://images/char_01.png" id="8_7t0km"]
[ext_resource type="Script" path="res://src/gui/dialouge_box.gd" id="9_xrtqy"]
[ext_resource type="Texture2D" uid="uid://c1573yuhpdxjd" path="res://images/dialogue_popup.png" id="10_pc5g7"]
[ext_resource type="Script" path="res://src/gui/item_selector.gd" id="11_rvxkf"]
[ext_resource type="PackedScene" uid="uid://g5t55nsq2pie" path="res://scenes/objects/bed.tscn" id="12_k70wm"]
[ext_resource type="Script" path="res://scenes/guest_spawner.gd" id="13_wsqgk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jxg44"]
atlas = ExtResource("3_037ej")
region = Rect2(48, 64, 16, 16)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1y6tj"]
vertices = PackedVector2Array(126, 62, -78, 62, -78, -126, 126, -126)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(136, -136, -88, -136, -88, 72, 136, 72)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="NavigationPolygon" id="NavigationPolygon_msyrg"]
vertices = PackedVector2Array(-533, 75, -533, -125, -531, -125, -531, 77, -749, 77, -747, 75, -749, -125, -747, -125, -571, 28, -709, 28, -709, -85, -571, -85)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(0, 3, 4, 5), PackedInt32Array(5, 4, 6, 7), PackedInt32Array(8, 9, 10, 11)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-520, -136, -760, -136, -760, 88, -520, 88)])
parsed_geometry_type = 1
source_geometry_mode = 1
source_geometry_group_name = &"navigation"
agent_radius = 11.0

[sub_resource type="AtlasTexture" id="AtlasTexture_82bhj"]
atlas = ExtResource("8_7t0km")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_io45b"]
atlas = ExtResource("8_7t0km")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8bf7"]
atlas = ExtResource("8_7t0km")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7tv0"]
atlas = ExtResource("8_7t0km")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jefb5"]
atlas = ExtResource("8_7t0km")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3tsf"]
atlas = ExtResource("8_7t0km")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdgm4"]
atlas = ExtResource("8_7t0km")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq47c"]
atlas = ExtResource("8_7t0km")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ph582"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82bhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io45b")
}],
"loop": true,
"name": &"walking_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8bf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7tv0")
}],
"loop": true,
"name": &"walking_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jefb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3tsf")
}],
"loop": true,
"name": &"walking_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdgm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq47c")
}],
"loop": true,
"name": &"walking_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63j7x"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwxx6"]
size = Vector2(12, 8)

[sub_resource type="CanvasTexture" id="CanvasTexture_4n076"]
diffuse_texture = ExtResource("10_pc5g7")

[sub_resource type="AtlasTexture" id="AtlasTexture_67uy7"]
atlas = ExtResource("3_037ej")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_06m3u"]
atlas = ExtResource("3_037ej")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt1xt"]
atlas = ExtResource("3_037ej")
region = Rect2(64, 32, 16, 16)

[node name="Root" type="Node2D"]

[node name="TileMapManager" parent="." instance=ExtResource("1_wvx64")]

[node name="EntryToBasementStairs" parent="TileMapManager" node_paths=PackedStringArray("link") instance=ExtResource("2_rhamc")]
position = Vector2(88, 24)
link = NodePath("../BasementToEntryStairs")

[node name="WarpPoint" parent="TileMapManager/EntryToBasementStairs" index="2"]
position = Vector2(-16, 0)

[node name="CameraPoint" parent="TileMapManager/EntryToBasementStairs" index="4"]
position = Vector2(-64, -48)

[node name="BasementToEntryStairs" parent="TileMapManager" node_paths=PackedStringArray("link") instance=ExtResource("2_rhamc")]
position = Vector2(456, 8)
link = NodePath("../EntryToBasementStairs")

[node name="Stairs" parent="TileMapManager/BasementToEntryStairs" index="0"]
texture = SubResource("AtlasTexture_jxg44")

[node name="WarpPoint" parent="TileMapManager/BasementToEntryStairs" index="2"]
position = Vector2(16, 0)

[node name="NavigationLink2D" parent="TileMapManager/BasementToEntryStairs" index="3"]
travel_cost = 1.0

[node name="CameraPoint" parent="TileMapManager/BasementToEntryStairs" index="4"]
position = Vector2(128, -96)

[node name="EntryToRoomStairs2" parent="TileMapManager" node_paths=PackedStringArray("link") instance=ExtResource("4_81x4m")]
position = Vector2(-56, -24)
link = NodePath("../RoomToEntryStairs2")

[node name="WarpPoint" parent="TileMapManager/EntryToRoomStairs2" index="2"]
position = Vector2(16, 0)

[node name="CameraPoint" parent="TileMapManager/EntryToRoomStairs2" index="4"]
position = Vector2(80, 0)

[node name="RoomToEntryStairs2" parent="TileMapManager" node_paths=PackedStringArray("link") instance=ExtResource("4_81x4m")]
position = Vector2(-552, -24)
link = NodePath("../EntryToRoomStairs2")

[node name="WarpPoint" parent="TileMapManager/RoomToEntryStairs2" index="2"]
position = Vector2(-16, 0)

[node name="CameraPoint" parent="TileMapManager/RoomToEntryStairs2" index="4"]
position = Vector2(-104, 0)

[node name="LobbyNav" type="NavigationRegion2D" parent="." groups=["room_navigation"]]
navigation_polygon = SubResource("NavigationPolygon_1y6tj")
script = ExtResource("5_pbgfy")

[node name="RoomNav" type="NavigationRegion2D" parent="." groups=["room_navigation"]]
navigation_polygon = SubResource("NavigationPolygon_msyrg")
script = ExtResource("5_pbgfy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(24, -24)
zoom = Vector2(2, 2)

[node name="CharacterBody2D2" parent="." instance=ExtResource("6_j1vmi")]
position = Vector2(72, -72)
npc_json = ExtResource("7_i5j8r")

[node name="PlayerBody2D" type="CharacterBody2D" parent="." node_paths=PackedStringArray("animation", "raycast", "tile_map_manager", "camera", "item_selector")]
z_index = 1
position = Vector2(-24, 8)
motion_mode = 1
script = ExtResource("7_6lngv")
SPEED = 100.0
animation = NodePath("AnimatedSprite2D")
raycast = NodePath("RayCast2D")
tile_map_manager = NodePath("../TileMapManager")
camera = NodePath("../Camera2D")
item_selector = NodePath("../CanvasLayer/ItemSelector")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerBody2D"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ph582")
animation = &"walking_up"

[node name="TransitionTrigger" type="Area2D" parent="PlayerBody2D"]
collision_mask = 2

[node name="TriggerShape" type="CollisionShape2D" parent="PlayerBody2D/TransitionTrigger"]
shape = SubResource("RectangleShape2D_63j7x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody2D"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_qwxx6")

[node name="RayCast2D" type="RayCast2D" parent="PlayerBody2D"]
target_position = Vector2(0, -16)
collision_mask = 3
collide_with_areas = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="MarginContainer" parent="CanvasLayer" node_paths=PackedStringArray("rich_text", "player")]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -257.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("9_xrtqy")
rich_text = NodePath("TextureRect/DialogueText")
player = NodePath("../../PlayerBody2D")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DialogueBox"]
layout_mode = 2
texture = SubResource("CanvasTexture_4n076")
expand_mode = 1

[node name="DialogueText" type="RichTextLabel" parent="CanvasLayer/DialogueBox/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 32.0
offset_right = -29.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
theme_override_font_sizes/normal_font_size = 23
text = "Hello goober. You're a goofball teehee"

[node name="ItemSelector" type="MarginContainer" parent="CanvasLayer" node_paths=PackedStringArray("selector", "hbox")]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 270.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("11_rvxkf")
selector = NodePath("TextureRect/Selector")
hbox = NodePath("TextureRect/HBoxContainer")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ItemSelector"]
layout_mode = 2
texture = ExtResource("10_pc5g7")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ItemSelector/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 75.0
offset_right = -29.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ItemSelector/TextureRect/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_67uy7")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/ItemSelector/TextureRect/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_06m3u")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/ItemSelector/TextureRect/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_bt1xt")
expand_mode = 3
stretch_mode = 4

[node name="Selector" type="Panel" parent="CanvasLayer/ItemSelector/TextureRect"]
layout_mode = 0
offset_left = 21.5
offset_top = 75.0
offset_right = 120.5
offset_bottom = 163.0

[node name="NpcDestination" type="Node2D" parent="."]
position = Vector2(-616, -72)

[node name="Bed" parent="." instance=ExtResource("12_k70wm")]
position = Vector2(-664, -88)

[node name="GuestSpawner" type="Node2D" parent="." node_paths=PackedStringArray("front_desk_position")]
script = ExtResource("13_wsqgk")
guests = Array[PackedScene]([ExtResource("6_j1vmi")])
front_desk_position = NodePath("FrontDeskPoint")

[node name="FrontDeskPoint" type="Node2D" parent="GuestSpawner"]
position = Vector2(40, -40)

[connection signal="bake_finished" from="LobbyNav" to="TileMapManager" method="_post_baking"]
[connection signal="bake_finished" from="RoomNav" to="TileMapManager" method="_post_baking"]
[connection signal="area_entered" from="PlayerBody2D/TransitionTrigger" to="PlayerBody2D" method="_on_transition_trigger_area_entered"]

[editable path="TileMapManager/EntryToBasementStairs"]
[editable path="TileMapManager/BasementToEntryStairs"]
[editable path="TileMapManager/EntryToRoomStairs2"]
[editable path="TileMapManager/RoomToEntryStairs2"]
[editable path="CharacterBody2D2"]
